--- a/frontend/client/KidsFurniture.html
+++ b/frontend/client/KidsFurniture.html
@@ -48,59 +48,73 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/kids%20tables.jpg" class="img-fluid" alt="Product 1">
-                        <h5 class="product-title text-center mt-3">Kids Tables</h5>
-                    </div>
+                    <a href="kidstables.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/kids%20tables.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Kids Tables</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/kids-cots.jpg" class="img-fluid" alt="Product 2">
-                        <h5 class="product-title text-center mt-3">Cots</h5>
-                    </div>
+                    <a href="cots.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/kids-cots.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Cots</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/banybeds.jpg" class="img-fluid" alt="Product 3">
-                        <h5 class="product-title text-center mt-3">Baby Beds</h5>
-                    </div>
+                    <a href="babybeds.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/banybeds.jpg" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Baby Beds</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/baby%20wardores.jpg" class="img-fluid" alt="Product 4">
-                        <h5 class="product-title text-center mt-3">Baby Wardores </h5>
-                    </div>
+                    <a href="babywardrobe.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/baby%20wardores.jpg" class="img-fluid" alt="Product 4">
+                            <h5 class="product-title text-center mt-3">Baby Wardores </h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/kidsbookracks.jpg" class="img-fluid" alt="Product 1">
-                        <h5 class="product-title text-center mt-3">Book racks</h5>
-                    </div>
+                    <a href="bookracks.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/kidsbookracks.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Book racks</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/chestodrawers.jpg" class="img-fluid" alt="Product 2">
-                        <h5 class="product-title text-center mt-3">Chest of drawers</h5>
-                    </div>
+                    <a href="chestofdrawers.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/chestodrawers.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Chest of drawers</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/kidscomputertables.jpg" class="img-fluid" alt="Product 3">
-                        <h5 class="product-title text-center mt-3">Computer Tables</h5>
-                    </div>
+                    <a href="computertables.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/kidscomputertables.jpg" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Computer Tables</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <!-- End Product List Row -->
