--- a/frontend/client/hotelFurniture.html
+++ b/frontend/client/hotelFurniture.html
@@ -48,67 +48,83 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/hot-dinning.jpg" class="img-fluid" alt="Product 1">
-                        <h5 class="product-title text-center mt-3">Dinning furniture</h5>
-                    </div>
+                    <a href="dinningfurnitures.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/hot-dinning.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Dinning furniture</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/hot-room.jpg" class="img-fluid" alt="Product 2">
-                        <h5 class="product-title text-center mt-3">Room furniture</h5>
-                    </div>
+                    <a href="roomfurnitures.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/hot-room.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Room furniture</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/lobby-fur.jpg" class="img-fluid" alt="Product 3">
-                        <h5 class="product-title text-center mt-3">Lobby furniture</h5>
-                    </div>
+                    <a href="lobbyfurnitures.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/lobby-fur.jpg" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Lobby furniture</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/reception-desk.jpg" class="img-fluid" alt="Product 4">
-                        <h5 class="product-title text-center mt-3">Reception Desk</h5>
-                    </div>
+                    <a href="receptiontables.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/reception-desk.jpg" class="img-fluid" alt="Product 4">
+                            <h5 class="product-title text-center mt-3">Reception Desk</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/hot-kicthen.jpg" class="img-fluid" alt="Product 1">
-                        <h5 class="product-title text-center mt-3">Kitchen furniture</h5>
-                    </div>
+                    <a href="kitchenfurniture.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/hot-kicthen.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Kitchen furniture</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/hot-garden.jpg" class="img-fluid" alt="Product 2">
-                        <h5 class="product-title text-center mt-3">Garden furniture</h5>
-                    </div>
+                    <a href="gardenfurnitures.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/hot-garden.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Garden furniture</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/barstool.jpg" class="img-fluid" alt="Product 3">
-                        <h5 class="product-title text-center mt-3">Bar Stool</h5>
-                    </div>
+                    <a href="barstool.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/barstool.jpg" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Bar Stool</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/sunbeige.jpg" class="img-fluid" alt="Product 4">
-                        <h5 class="product-title text-center mt-3">Sun beige</h5>
-                    </div>
+                    <a href="sunbeidge.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/sunbeige.jpg" class="img-fluid" alt="Product 4">
+                            <h5 class="product-title text-center mt-3">Sun beige</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <!-- End Product List Row -->
